test/fail/enums_and_variants/match_else_too_late.lily
#[
SyntaxError: 'else' within an exhaustive match.
    from match_else_too_late.lily:9:
]#

match Some(1): {
    case Some(_):
    case None:
    else:
}
